Fix remote delete for private stories.